--- a/proyectoProductos.html
+++ b/proyectoProductos.html
@@ -38,7 +38,7 @@
 </head>
 <body background="https://img.freepik.com/vector-gratis/diseno-marco-dibujado-mano_23-2149676133.jpg?w=2000">
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top px-2">
       <a class="navbar-brand" href="/indexProyecto.html">Cupkelat</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
